--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -47,6 +47,17 @@
   margin-bottom: 0px;
 }
 
+.chatInputBackDrop {
+  width: 100%;
+  height: 120px;
+  background-color: #111111;
+  position: sticky;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 5;
+}
+
 .chatEmptyStateSubtitle {
   margin-top: 20px;
   font-style: normal;
@@ -108,6 +119,7 @@
   order: 0;
   flex-grow: 0;
   overflow-wrap: break-word;
+  overflow: hidden;
   word-break: normal;
   white-space: normal;
   max-width: 60%;
